package code;

public class Apurado implements Perfil {

    @Override
    public boolean quiereSubir(Micro m) {
        return true;
    }

}
