package code;

public interface Perfil {

    boolean quiereSubir(Micro m);

}
