@startuml
title "ACME S.A."
!theme reddress-darkblue
scale 1.3
skinparam Linetype ortho
skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor #C4CBCA
skinparam titleBackgroundColor #0A0F0D
skinparam defaultFontColor #FFFFFF
skinparam titleFontColor #EE4266



class Micro {
    -double volumen;
    -int capacidadSentados;
    -int capacidadParados;
    -ArrayList<Pasajero> pasajeros;
    -Pasajero primeroEnSubir;

    +int getAsientosLibres();
    +int getLugaresParadosLibres();
    +int getLugaresTotalesLibres();
    +boolean puedeSubir(Pasajero p);
    +void subirPasajero(Pasajero p);
    +void bajarPasajero(Pasajero p);
    +void setPrimeroEnSubir(Pasajero p);
    +Pasajero getPrimeroEnSubir();
}

class Pasajero {
    -String nombre;
    -int legajo;
    -Perfil perfil;
    -Pasajero jefe;

    +boolean esJefe();
    +boolean quiereSubir(Micro m);
}

interface Perfil {
    +boolean quiereSubir(Micro m);
}

class Apurado {
    +boolean quiereSubir(Micro m);
}

class Claustrofobico {
    +boolean quiereSubir(Micro m);
}

class Fiaca {
    +boolean quiereSubir(Micro m);
}

class Moderado {
    -int minLugaresLibres;

    +boolean quiereSubir(Micro m);
}

class Obsecuente {
    -Perfil perfilJefe;

    +boolean quiereSubir(Micro m);
}



'Relaciones
Pasajero -l-> Micro
Pasajero *-- Perfil

Perfil <|.l. Apurado
Perfil <|.. Claustrofobico
Perfil <|.. Fiaca
Perfil <|.. Moderado
Perfil <|.r. Obsecuente


'Notas
'Perfiles
note bottom of Apurado: return true;

note bottom of Claustrofobico: if(m.volumen <= 120)\n    throw new ClaustrofobicoNoSubeException(); \nreturn true;

note bottom of Fiaca: if(m.getAsientosLibres() == 0)\n    throw new FiacaNoSubeException(); \nreturn true;

note bottom of Moderado: if(this.minLugaresLibres > m.getLugaresTotalesLibres())\n    throw new ModeradoNoSubeException(); \nreturn true;

note bottom of Obsecuente: return this.perfilJefe.quiereSubir(m);

'Pasajero
note right of Pasajero::esJefe
return this.jefe == null;
endnote

note right of Pasajero::quiereSubir
return this.perfil.quiereSubir(m);
endnote

'Micro
note as N1
Asumo que a medida que los pasajeros se suben
al micro van ocupando primero los asientos libres
endnote
Micro -u- N1

note left of Micro::getAsientosLibres
int asientosLibres = this.capacidadSentados - this.pasajeros.count();
if(asientosLibres <= 0)
    asientosLibres = 0;
return asientosLibres;
endnote

note left of Micro::getLugaresParadosLibres
int lugaresLibres = this.capacidadParados;
if(this.getAsientosLibres() == 0) {
    lugaresLibres -= (this.pasajeros.count() - this.capacidadSentados);
    if(lugaresLibres <= 0)
        lugaresLibres = 0;
}
return lugaresLibres;
endnote

note left of Micro::getLugaresTotalesLibres
return this.getAsientosLibres() + this.getLugaresParadosLibres();
endnote

note left of Micro::puedeSubir
if(this.getLugaresTotalesLibres() == 0)
    throw new MicroLlenoException();
return p.quiereSubir(this);
endnote

note left of Micro::subirPasajero
try {
    this.puedeSubir(p);
    this.setPrimeroEnSubir(p);
    this.pasajeros.add(p);
}
catch(MicroLlenoException e) {
    //manejo del error
}
catch(ModeradoNoSubeException e) {
    //manejo del error
}
catch(ClaustrofobicoNoSubeException e) {
    //manejo del error
}
catch(FiacaNoSubeException e) {
    //manejo del error
}
return;
endnote

note left of Micro::bajarPasajero
if(this.pasajeros.count() == 0)
    throw new MicroVacioException();
if(this.pasajeros.contains(p) == false)
    throw new NoExistePasajeroException();
this.pasajeros.remove(p);
return;
endnote

note left of Micro::setPrimeroEnSubir
if(this.primeroEnSubir == null)
        this.primeroEnSubir = p;
return;
endnote

note left of Micro::getPrimeroEnSubir
return this.primeroEnSubir;
endnote

@enduml